--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400&family=Wix+Madefor+Display&display=swap');
+
+*{
+    margin: 0%;
+    padding: 0%;
+    font-family: "Roboto" ,sans-serif;
+    box-sizing: border-box;
+    text-decoration: none;
+    scroll-behavior: smooth;
+}
